<resources>
    <string name="app_name">EulerityProject</string>

    <!--Splash Screen-->
    <string name="loading_images">Loading images…</string>

    <!--Image List-->
    <string name="select_image">Select an image</string>

    <!--Editor-->
    <string name="apply_filters">Apply Filters</string>
    <string name="upload">Upload</string>
    <string name="clear">Clear</string>
    <string name="upload_successful">Upload successful!</string>

    <!--Add Text-->
    <string name="add_text">Add text…</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="color">Color</string>
    <string name="text_size">Text Size: %d</string>

    <!--Color Picker-->
    <string name="red_label">Red: %d</string>
    <string name="green_label">Green: %d</string>
    <string name="blue_label">Blue: %d</string>

    <!--Value Picker-->
    <string name="brightness_value_label">Brightness</string>
    <string name="contrast_value_label">Contrast</string>
    <string name="saturation_value_label">Saturation</string>
    <string name="hue_value_label">Hue</string>

    <!--Filters-->
    <string name="filter_text">Add Text</string>
    <string name="filter_grayscale">Grayscale Filter</string>
    <string name="filter_vignette">Vignette Filter</string>
    <string name="filter_sepia">Sepia Filter</string>
    <string name="filter_invert">Invert Filter</string>
    <string name="filter_brightness">Brightness Filter</string>
    <string name="filter_contrast">Contrast Filter</string>
    <string name="filter_saturation">Saturation Filter</string>
    <string name="filter_hue">Hue Filter</string>
    <string name="filter_tint">Tint Filter</string>
    <string name="filter_rotate_right">Rotate Right</string>
    <string name="filter_rotate_left">Rotate Left</string>
    <string name="filter_flip_horizontal">Flip Horizontally</string>
    <string name="filter_flip_vertical">Flip Vertically</string>

    <!--Misc-->

</resources>